apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  annotations:
    metallb.io/loadBalancerIPs: 192.168.0.246
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  ports:
  - name: web-ui
    port: 8384
    targetPort: 8384
    protocol: TCP
  - name: sync
    port: 22000
    targetPort: 22000
    protocol: TCP
  - name: discovery
    port: 21027
    targetPort: 21027
    protocol: UDP
