apps/syncthing/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sync.theorangeserver.net`)
      kind: Rule
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: wildcard-certificate
